--- a/config.yml
+++ b/config.yml
@@ -12,6 +12,7 @@ params:
     -
       name: Media Proxy
       description: This is the service responsible for serving images, audio, and video. It is reliant on our CDN.
+      partial: custom/metrics
 
   useLargeHeaderDesign: false
   useLogo: true
